# autoevolve

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/autoevolve/: __init__.py  __main__.py  app.py  cli.py  constants.py  dashboard.py  errors.py  git.py  gittools.py  harnesses.py  init_cmd.py  models.py  problem.py  prompt.py  repository.py  scaffold.py  utils.py  workspace.py  worktree.py
src/autoevolve/commands/: analytics.py  human.py  inspect.py  lifecycle.py  shared.py
src/autoevolve/models/: experiment.py  git.py  lineage.py  types.py  worktree.py
tests/: conftest.py  experiments.py  test_e2e.py
tests/e2e/: conftest.py  experiments.py  test_analytics.py  test_dashboard.py  test_human.py  test_inspect.py  test_lifecycle.py
tests/fixtures/playground/: README.md  pyproject.toml
tests/fixtures/playground/data/: cases.json
tests/fixtures/python-playground/: README.md  pyproject.toml
tests/fixtures/python-playground/scripts/: validate.py
tests/fixtures/python-playground/src/: ranker.py
tests/unit/autoevolve/: test_problem.py  test_repository.py
