[project]
name = "autoevolve"
version = "0.1.0"
description = "Git-backed experiment loops for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.8,<9",
  "GitPython>=3.1.43,<4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3.5,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
autoevolve = "autoevolve.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoevolve"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
