[project]
name = "autoevolve"
version = "0.1.0"
description = "Git-backed experiment loops for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.8,<9",
  "GitPython>=3.1.43,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3.5,<9",
    "dirty-equals>=0.11",
    "inline-snapshot>=0.32.5",
]

[project.scripts]
autoevolve = "autoevolve.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoevolve"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename} -"
