[project]
name = "autoevolve"
version = "0.1.0"
description = "Git-backed experiment loops for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=14",
    "textual>=1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "inline-snapshot>=0.32.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[project.scripts]
autoevolve = "autoevolve.app:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoevolve"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename} -"
